test/ill-formed/multi-file/shadow_captured_by_import/main.py
helper = 1
def f():
    return helper
import helper
print(type(f()).__name__)
